# inverse-npde

./: .gitignore  .kilocodeignore  FIX_LLVMCALL_ERROR.md  Manifest.toml  Project.toml  README.md  README_QUICK_START.md  TEMPORAL_AWARE_NETWORK.md  fix_notebook_config.py  fix_openssl.sh  install.sh  pde_exp_julia.ipynb  pyproject.toml  requirements.txt  run_experiment.sh  test_additional_loss.jl  test_data_loss_raw.jl  test_forwarddiff_fix.jl  test_gradient_scale_adaptive_loss.jl  test_mc_integral_gpu.jl  test_simple_gradient.jl  test_time_aware_network.jl  test_tv_fixed.jl  test_tv_gradient.jl  test_tv_gradient_fd.jl
.CondaPkg/: meta
.kilo/plans/: 1775162975491-silent-tiger.md  1776019948314-crisp-rocket.md
docs/: EEG_DATA_GENERATION.md  OPENSSL_BUG_DIAGNOSIS.md  PML.md  README.md  USER_GUIDE.md  openssl_fix.md
docs/analysis_and_improvements/: ANALYSIS_AND_IMPROVEMENTS.md  ANALYSIS_SUMMARY.md  IMPLEMENTATION_GUIDE_ANATOMY.md  IMPLEMENTATION_GUIDE_OPTIMIZATION.md  README.md  ROADMAP_IMPLEMENTATION.md
examples/: README.md  eeg_data_demo.py  eeg_inverse_results.json  eeg_realistic_demo.ipynb  eeg_realistic_demo_julia.ipynb  experiment_results.jld2  potential_3d_interactive.html  quick_start_demo.ipynb  simple_sensor_plot.py  viz3d.html
examples/results/: experiment_results_26_02_2026_18_32.jld2  experiment_results_27_02_2026_17_35_good.jld2  experiment_results_28_02_2026_17_01.jld2
experiments/base/: eeg_realistic_demo.ipynb  inverse_problem_eeg.ipynb  (+1 more)
paper/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.tex  npde-bibliography.bib  Тезис к работе.docx  Тезис к работе.txt  Тезис к работе.xml  Тезис_к_работе_новый.txt
plans/: adaptive_lambda_plan.md  bijective_inverse_problem_plan.md  constraint_loss_plan.md  dalembert_operator_universal.md  derivative_prediction_implementation_plan.md  derivative_prediction_plan.md  eeg_normalization_plan.md  field_energy_regularization_plan.md  head_constraint_plan.md  inverted_barrier_loss_plan.md  lambda_pde_bc_fix_plan.md  lambda_scheduler_fix.md  pml_damping_implementation.md  pml_implementation_plan.md  pml_sigma_scaling_fix.md  pml_verification_report.md  rbf_network_architecture_plan.md  temporal_stationarity_analysis.md  thesis_plan.md  two_stage_optimization_plan.md
slides/: defense.snm  defense.tex  main.aux  main.fdb_latexmk  main.fls  main.snm  main.tex
src/: InverseNpde.jl  __init__.py
tests/: test_eeg_inverse.ipynb  test_eeg_inverse_juliacall.ipynb  test_julia_integration.py  test_juliacall_simple.py  test_pml.jl  test_pml_pde_system.jl
(+28 files in other folders)
