[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inverse_npde"
version = "0.1.0"
description = "Модуль для решения обратной задачи ЭЭГ с использованием Julia и Python"
authors = [
    {name = "EEG Research Team", email = "research@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["eeg", "neuroscience", "inverse-problem", "julia", "pde", "neural-pde"]
dependencies = [
    # Основные научные библиотеки
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "xarray>=0.18.0",
    
    # Библиотеки для работы с ЭЭГ
    "mne>=1.0.0",
    "pyriemann>=0.4.0",
    
    # Библиотеки для машинного обучения
    "scikit-learn>=1.0.0",
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    
    # Библиотеки для работы с Julia
    "juliacall>=0.9.0",
    
    # Визуализация и интерактивность
    "plotly>=5.0.0",
    "ipywidgets>=7.6.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    
    # Утилиты
    "tqdm>=4.62.0",
    "pathlib2>=2.3.6",
    "configparser>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "isort>=5.9.0",
    "mypy>=0.910",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/inverse-npde"
Documentation = "https://inverse-npde.readthedocs.io/"
Repository = "https://github.com/your-username/inverse-npde.git"
"Bug Tracker" = "https://github.com/your-username/inverse-npde/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["inverse_npde", "neural_pde_solver", "eeg_inverse_interface"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"inverse_egg_neural_pde_solver" = ["*.jl", "*.json", "*.yaml", "*.yml", "*.txt", "*.md"]
"inverse_npde" = ["*.py", "*.json", "*.yaml", "*.yml", "*.txt", "*.md"]